@@ -59,6 +59,8 @@ Revision 4.2.3
   impementations. The former just process a single interaction and complete
   while the latter run as many interactions as user callback function
   indicates to.
+- Fix to CommandGenerator's SNMPv3 engine autodiscovery algorithm
+  when retryCount is administratively set to 0.
 - Fix to Notification Originator to make it communicating a single
   sendPduHandle to an application even when multiple INFORMs are triggered
   and processed by a single call by way of transport tagging feature.
